# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2004-07-28(Wed) 05:07:00 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/google.nb : support gooo*gle


2004-07-27(Tue) 11:16:05 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/ndk_client.rb : fix typo


2004-07-26(Mon) 02:13:58 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/backlogbot.nb : fixed a bug

	* plugins/modemanager.nb : applied unak's patch
	(support delaied distribution, and so on)

	* ndk_client.rb : fix exception handling


2004-07-24(Sat) 21:26:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/modemanager.nb : added


2004-07-24(Sat) 07:30:10 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix server login process(reconnect
	if server replies error)

	* ndk_manager.rb, ndk_state.rb : support 'KICK' state

	* ndk_manager.rb, ndk_staet.rb : support safe channel

	* plugins/backlogbot.nb : fix around safe channel bugs

	* plugins/googlebot.nb(googlec) : fix charcode problem


2004-07-21(Wed) 19:17:13 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_bot.rb(canonical_channel_name) : added
	and this alias 'ccn' is added

	* ndk_state.rb : rename channel_member to channel_users
	and channel_member_mode to channel_user_mode


2004-07-21(Wed) 00:57:44 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : part only from own nick when server
	disconnect


2004-07-20(Tue) 11:33:46 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.2 release

	* ndk_version.rb : 0.6.3


2004-07-20(Tue) 04:06:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : use NdkCommandDescription to list
	items

	* ndk_config.rb(identical_channel_name) : add euc-jp option to regexp


2004-07-20(Tue) 02:23:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/sixamo.nb : change talk ratio algorithm


2004-07-20(Tue) 02:23:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/sixamo.nb : fix talk ratio algorithm


2004-07-20(Tue) 02:18:01 +0900  Koichi Sasada  <ko1@atdot.net>
